--- a/MVC/Views/Conversions/Details.cshtml
+++ b/MVC/Views/Conversions/Details.cshtml
@@ -11,13 +11,13 @@
     <hr />
     <dl class="row">
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.ConversionName)
+            Name
         </dt>
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.ConversionName)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.ConversionValue)
+           Value
         </dt>
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.ConversionValue)
