--- a/MVC/Views/Accounts/Details.cshtml
+++ b/MVC/Views/Accounts/Details.cshtml
@@ -11,7 +11,7 @@
     <hr />
     <dl class="row">
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.UserDisplayName)
+            User's name
         </dt>
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.UserDisplayName)
@@ -20,7 +20,7 @@
             @Html.DisplayNameFor(model => model.Balance)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Balance)
+            @Html.DisplayFor(model => model.Balance) CHF
         </dd>
     </dl>
 </div>
