--- a/MVC/Views/AppUser/Buy.cshtml
+++ b/MVC/Views/AppUser/Buy.cshtml
@@ -2,56 +2,82 @@
 
 @{
     ViewData["Title"] = "Buy";
-
 }
-
 
 <h1>Buy</h1>
 <hr />
 <div class="row">
-    <div class="col-md-4">
+    <div class="col-md-6">
         <form asp-action="Buy">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <div class="form-group">
-                <label asp-for="AccountId" class="control-label">User</label>
-                <select asp-for="AccountId" class="form-control" asp-items="ViewBag.AccountsSelect"></select>
-                <span asp-validation-for="AccountId" class="text-danger"></span>
-            </div>
-            <div class="form-group mt-3">
-                <label asp-for="ConversionId" class="control-label">Conversion</label>
-                <select asp-for="ConversionId" class="form-control" asp-items="ViewBag.ConversionsSelect"></select>
-                <span asp-validation-for="ConversionId" class="text-danger"></span>
-            </div>
 
-            <div class="col-md-12 mt-3">
-                <div class="form-group">
-                    <label asp-for="Quantity" class="control-label">Quantity</label>
-
-                    <div class="input-group">
-                        <input asp-for="Quantity" class="form-control" type="number" step="1" />
-                        <button type="submit" class="btn btn-primary" value="Calculate" name="calculate" formaction="Calculate">Calculate</button>
+            <div class="row">
+                <div class="col">
+                    <div class="form-group">
+                        <label asp-for="AccountId" class="control-label">User</label>
+                        <select asp-for="AccountId" class="form-control" asp-items="ViewBag.AccountsSelect"></select>
+                        <span asp-validation-for="AccountId" class="text-danger"></span>
                     </div>
-                    <span asp-validation-for="Quantity" class="text-danger"></span>
                 </div>
             </div>
-            <div class="form-group mt-3">
-                <label asp-for="calculatedPrice" class="control-label">Total</label>
-                <input asp-for="calculatedPrice" class="form-control" readonly />
+
+            <div class="row mt-3">
+                <div class="col">
+                    <div class="form-group">
+                        <label asp-for="ConversionId" class="control-label">Conversion</label>
+                        <select asp-for="ConversionId" class="form-control" asp-items="ViewBag.ConversionsSelect"></select>
+                        <span asp-validation-for="ConversionId" class="text-danger"></span>
+                    </div>
+                </div>
             </div>
+
+            <div class="row mt-3">
+                <div class="col">
+                    <div class="form-group">
+                        <label asp-for="Quantity" class="control-label">Quantity</label>
+                        <div class="input-group">
+                            <input asp-for="Quantity" class="form-control" type="number" step="1" />
+                            <button type="submit" class="btn btn-primary" value="Calculate" name="calculate" formaction="Calculate">Calculate</button>
+                        </div>
+                        <span asp-validation-for="Quantity" class="text-danger"></span>
+                    </div>
+                </div>
+            </div>
+
+            <div class="row mt-1">
+                <div class="col">
+                    <div class="form-group">
+                        <label asp-for="calculatedPrice" class="control-label">Total</label>
+                        <div class="input-group mb-3">
+                            <input asp-for="calculatedPrice" class="form-control" readonly />
+                            <div class="input-group-append">
+                                <span class="input-group-text">CHF</span>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
             <!-- hidden input to transmit conversionList (IEnumerable) -->
             @if (ViewBag.AccountsAvailable && ViewBag.ConversionsAvailable)
             {
-                <div class="form-group mt-3">
-                    <input type="submit" value="Buy" class="btn btn-primary" />
+                <div class="row mt-1">
+                    <div class="col">
+                        <div class="form-group">
+                            <input type="submit" value="Buy" class="btn btn-primary" />
+                        </div>
+                    </div>
                 </div>
             }
         </form>
     </div>
+
+    <!-- Image Column -->
+    <div class="col-md-6 d-flex align-items-center ">
+        <img src="https://cdn.thewirecutter.com/wp-content/media/2023/04/printers-2048px-09256-2x1-1.jpg?width=2048&quality=75&crop=2:1&auto=webp" class="img-fluid rounded"  style="max-width: 100%;">
+    </div>
 </div>
 
-
-<div>
+<div class="mt-3">
     <a asp-action="Index">Back to List</a>
 </div>
-
-<img class="mt-3" src="https://cdn.thewirecutter.com/wp-content/media/2023/04/printers-2048px-09256-2x1-1.jpg?width=2048&quality=75&crop=2:1&auto=webp" style="width:100%; height:300px;" />
