--- a/MVC/Views/Conversions/Index.cshtml
+++ b/MVC/Views/Conversions/Index.cshtml
@@ -14,10 +14,10 @@
     <thead>
         <tr>
             <th>
-                @Html.DisplayNameFor(model => model.ConversionName)
+                Name
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.ConversionValue)
+                Value
             </th>
             <th>Actions</th>
         </tr>
