--- a/MVC/Views/UserGroups/Create.cshtml
+++ b/MVC/Views/UserGroups/Create.cshtml
@@ -13,11 +13,11 @@
         <form asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
-                <label asp-for="UserId" class="control-label"></label>
+                <label asp-for="UserId" class="control-label"> User</label>
                 <select asp-for="UserId" class ="form-select" asp-items="ViewBag.UserId"></select>
             </div>
             <div class="form-group mt-3">
-                <label asp-for="GroupId" class="control-label"></label>
+                <label asp-for="GroupId" class="control-label"> Group</label>
                 <select asp-for="GroupId" class="form-select" asp-items="ViewBag.GroupId"></select>
             </div>
             <div class="form-group mt-3">
