PayOnline addition + add the code for the transactions

--- a/MVC/Views/Conversions/Create.cshtml
+++ b/MVC/Views/Conversions/Create.cshtml
@@ -21,7 +21,7 @@
             <div class="form-group mt-3">
                 <label asp-for="ConversionValue" class="control-label">Value</label>
                 <div class="input-group mb-3">
-                    <input type="number" min="0" asp-for="ConversionValue" class="form-control" />
+                    <input type="number" min="0" step="0.01" asp-for="ConversionValue" class="form-control" />
                                  <div class="input-group-append">
                         <span class="input-group-text">CHF</span>
                     </div>
