--- a/MVC/Views/AppUser/Buy.cshtml
+++ b/MVC/Views/AppUser/Buy.cshtml
@@ -73,11 +73,7 @@
     </div>
 
     <!-- Image Column -->
-    <div class="col-md-6 d-flex align-items-center ">
+    <div class="col-md-6 d-flex align-items-center mt-3">
         <img src="https://cdn.thewirecutter.com/wp-content/media/2023/04/printers-2048px-09256-2x1-1.jpg?width=2048&quality=75&crop=2:1&auto=webp" class="img-fluid rounded"  style="max-width: 100%;">
     </div>
-</div>
-
-<div class="mt-3">
-    <a asp-action="Index">Back to List</a>
 </div>
