--- a/MVC/Views/AppUser/Buy.cshtml
+++ b/MVC/Views/AppUser/Buy.cshtml
@@ -33,10 +33,14 @@
 
             <div class="row mt-3">
                 <div class="col">
+                 
                     <div class="form-group">
-                        <label asp-for="Quantity" class="control-label">Quantity</label>
+                        <label asp-for="Quantity" class="control-label">Quantity</label>        
                         <div class="input-group">
                             <input asp-for="Quantity" class="form-control" type="number" step="1" />
+                            <div class="input-group-append">
+                                <span class="input-group-text">Pages</span>
+                            </div>
                             <button type="submit" class="btn btn-primary" value="Calculate" name="calculate" formaction="Calculate">Calculate</button>
                         </div>
                         <span asp-validation-for="Quantity" class="text-danger"></span>
