--- a/MVC/Views/Shared/Index.cshtml
+++ b/MVC/Views/Shared/Index.cshtml
@@ -4,7 +4,7 @@
 
 <div class="text-left">
     <div class="row">
-        <div class="col-12 text-center bg-light p-5">
+        <div class="col-12 text-center bg-light p-5 rounded">
             <h1 class="display-4">Welcome to Print-O-Matic</h1>
             <p class="lead">The best place to manage your documents</p>
         </div>
@@ -90,7 +90,7 @@
                 <i class="bi bi-people-fill flex-shrink-0 me-3" style="font-size: 1.75em;"></i>
                 <div>
                     <h3 class="fw-bold mb-0 fs-4 text-body-emphasis">Manage Groups</h3>
-                    <p>Manage user groups and their permissions.</p>
+                    <p>Manage user groups name and acronym</p>
                 </div>
             </div>
             <div class="col d-flex align-items-start">
@@ -104,14 +104,14 @@
                 <i class="bi bi-arrow-left-right flex-shrink-0 me-3" style="font-size: 1.75em;"></i>
                 <div>
                     <h3 class="fw-bold mb-0 fs-4 text-body-emphasis">Manage Conversion</h3>
-                    <p>Manage conversion rates and settings.</p>
+                    <p>Manage conversion for the printer</p>
                 </div>
             </div>
             <div class="col d-flex align-items-start">
                 <i class="bi bi-clock-history flex-shrink-0 me-3" style="font-size: 1.75em;"></i>
                 <div>
-                    <h3 class="fw-bold mb-0 fs-4 text-body-emphasis">Manage History</h3>
-                    <p>View and manage user activity history.</p>
+                    <h3 class="fw-bold mb-0 fs-4 text-body-emphasis">Manage Transaction History</h3>
+                    <p>View and manage user TransactionHistroy </p>
                 </div>
             </div>
         </div>
